--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.5",
         "livewire/livewire": "^3.5"
     },
     "require-dev": {
