--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "symfony/polyfill-mbstring": "^1.27"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
